[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "resultplus-reports"
version = "1.0.0"
description = "Diagnostic and data reporting utilities for Helena CRM API (ResultPlus project)."
authors = [
    { name = "Luiz Phillipe", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

dependencies = [
    "requests>=2.31.0",
    "google-api-python-client>=2.100.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Takesh0s/resultplus-lead-reports"
Repository = "https://github.com/Takesh0s/resultplus-lead-reports"